# autoreview

./: .autoreview.yml  .env.example  .gitignore  AutoReview_Agent_SRS.md  CLAUDE.md  Dockerfile  Dockerfile.sandbox  README.md  cli.py  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: dev.md  run-review.md  run-tests.md  sandbox-test.md
agents/: auditor.py  publisher.py  quality.py  test_runner.py
api/: main.py
core/: config.py  github_client.py  graph.py  sandbox.py  state.py
frontend/: index.html  package.json
frontend/src/: App.css  App.jsx
tests/: test_agents.py  test_fixtures.py
tests/fixtures/: hardcoded_secrets.py  insecure_deserialization.py  path_traversal.py  shell_injection.py  sql_injection.py  weak_crypto.py
tools/: bandit_tool.py  diff_tool.py  llm_tool.py  patch_tool.py
